--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 	<head>
 		<meta charset='utf-8' />
-		<title>Usine</title>
+		<title>Alpha Beta Tester</title>
 		<link rel='shortcut icon' type='image/png' href='res/favicon.png' />
 		<link rel='stylesheet' href='style.css' type='text/css' />
 		<script src='main.js' type='text/javascript'></script>
@@ -10,12 +10,12 @@
 	<body>
 		<section id='home' class='screen active'>
 			<h1>Usine</h1>
-			<button id='whatisusine'>What is Usine?</button>
+			<button id='whatisalphabetatester'>What is Alpha Beta Tester?</button>
 			<button id='go'>Go</button>
 		</section>
 		<section id='about' class='screen'>
-			<h1>About Usine</h1>
-			<p>Usine is a dashboard aiming to help solve problems by allowing its users to organize their thoughts and plan solutions. It is currently in the alpha stage.</p>
+			<h1>About Alpha Beta Tester</h1>
+			<p>Alpha Beta Tester is a dashboard aiming to help solve problems by allowing its users to organize their thoughts and plan solutions. It is currently in the alpha stage.</p>
 			<button id='back'>Back</button>
 		</section>
 		<section id='dashboard' class='screen'>
