--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<section id='home' class='screen active'>
-			<h1>Usine</h1>
+			<h1>Alpha Beta Tester</h1>
 			<button id='whatisalphabetatester'>What is Alpha Beta Tester?</button>
 			<button id='go'>Go</button>
 		</section>
