--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 			</div>
 			<div id='blueprints' class='cell'>
 				<h1>Blueprints (click to enlarge & use)</h1>
-				<button id='add-blueprint'>Add Note</button>
+				<button id='add-blueprint'>Add Blueprint</button>
 			</div>
 			<div id='resources-assessment' class='cell'>
 				<h1>Resources Assessment</h1>
