updated index.html, style.css & main.js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>Alpha Beta Tester</title>
 		<link rel='shortcut icon' type='image/png' href='res/favicon.png' />
 		<link rel='stylesheet' href='style.css' type='text/css' />
-		<script src='main.js' type='text/javascript'></script>
+		<script src='js/main.js' type='text/javascript'></script>
 	</head>
 	<body>
 		<section id='home' class='screen active'>
@@ -27,6 +27,9 @@
 				<h1>Blueprints (click to enlarge & use)</h1>
 				<button id='add-blueprint'>Add Blueprint</button>
 			</div>
+			<button id='save' class='cell'>Save Project</button>
+			<input id='load_hidden' type='file' hidden />
+			<button id='load' class='cell'>Load Project</button>
 			<div id='resources-assessment' class='cell'>
 				<h1>Resources Assessment</h1>
 				<div>
