--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 				<h1>Blueprints (click to enlarge & use)</h1>
 				<button id='add-blueprint'>Add Blueprint</button>
 			</div>
+			<textarea id='name' class='cell' placeholder='Untitled Project'></textarea>
 			<button id='save' class='cell'>Save Project</button>
 			<input id='load_hidden' type='file' hidden />
 			<button id='load' class='cell'>Load Project</button>
