updated index.html, style.css, & main.js

--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
 				<h1>Hi</h1>
 				<p>This is a template for an article. (we do not have any articles at the moment).</p>
 			</div>
+			<div id='problem' class='cell'>
+				<h1>Your Problem</h1>
+				<textarea placeholder='Define your problem here.'></textarea>
+			</div>
 			<div id='settings' class='cell'>
 				<h1>Settings</h1>
 				<div>
