--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>Alpha Beta Tester</title>
 		<link rel='shortcut icon' type='image/png' href='res/favicon.png' />
 		<link rel='stylesheet' href='style.css' type='text/css' />
+		<script src='js/hex.js' type='text/javascript'></script>
 		<script src='js/main.js' type='text/javascript'></script>
 	</head>
 	<body>
