--- a/index.html
+++ b/index.html
@@ -26,6 +26,28 @@
 			</div>
 			<div id='blueprints' class='cell'>
 				<h1>Blueprints (click to enlarge & use)</h1>
+				<!--div class='blueprint'>
+					<h1>Blueprint</h1>
+					<button>X</button>
+					<div>
+						<textarea class='idea' placeholder='Write down your idea here.'></textarea>
+						<div class='left'>
+							<h1>Draw Your Idea Here</h1>
+							<canvas></canvas>
+						</div>
+						<div class='right'>
+							<h1>What might go wrong, and what I will do.</h1>
+							<ul>
+								<li>
+									<textarea class='left' placeholder='What might go wrong.'></textarea>
+									<textarea class='right' placeholder='My plan of action.'></textarea>
+									<button>X</button>
+								</li>
+							</ul>
+							<button>+</button>
+						</div>
+					</div>
+				</div-->
 				<button id='add-blueprint'>Add Blueprint</button>
 			</div>
 			<textarea id='name' class='cell' placeholder='Untitled Project'></textarea>
