--- a/index.html
+++ b/index.html
@@ -26,28 +26,6 @@
 			</div>
 			<div id='blueprints' class='cell'>
 				<h1>Blueprints (click to enlarge & use)</h1>
-				<!--div class='blueprint'>
-					<h1>Blueprint</h1>
-					<button>X</button>
-					<div>
-						<textarea class='idea' placeholder='Write down your idea here.'></textarea>
-						<div class='left'>
-							<h1>Draw Your Idea Here</h1>
-							<canvas></canvas>
-						</div>
-						<div class='right'>
-							<h1>What might go wrong, and what I will do.</h1>
-							<ul>
-								<li>
-									<textarea class='left' placeholder='What might go wrong.'></textarea>
-									<textarea class='right' placeholder='My plan of action.'></textarea>
-									<button>X</button>
-								</li>
-							</ul>
-							<button>+</button>
-						</div>
-					</div>
-				</div-->
 				<button id='add-blueprint'>Add Blueprint</button>
 			</div>
 			<textarea id='name' class='cell' placeholder='Untitled Project'></textarea>
@@ -77,8 +55,12 @@
 			</div>
 			<div id='articles' class='cell'>
 				<h1>Articles</h1>
-				<h1>Hi</h1>
-				<p>This is a template for an article. (we do not have any articles at the moment).</p>
+				<div>
+					<div class='article'>
+						<h1 class='article-title'>Hi</h1>
+						<p>This is a template for an article. (we do not have any articles at the moment).</p>
+					</div>
+				</div>
 			</div>
 			<div id='problem' class='cell'>
 				<h1>Your Problem</h1>
