--- a/index.html
+++ b/index.html
@@ -5,6 +5,31 @@
 		<title>Alpha Beta Tester</title>
 		<link rel='shortcut icon' type='image/png' href='res/favicon.png' />
 		<link rel='stylesheet' href='style.css' type='text/css' />
+
+		<!-- The core Firebase JS SDK is always required and must be listed first -->
+		<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-app.js"></script>
+
+		<!-- TODO: Add SDKs for Firebase products that you want to use
+				 https://firebase.google.com/docs/web/setup#available-libraries -->
+		<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-auth.js"></script>
+		<script src="https://www.gstatic.com/firebasejs/7.2.1/firebase-firestore.js"></script>
+
+		<script>
+			// Your web app's Firebase configuration
+			var firebaseConfig = {
+				apiKey: "AIzaSyA-AIPWdYhyPElCZni0Gh9l7eDnBZ_2Nq4",
+				authDomain: "alpha-beta-tester.firebaseapp.com",
+				databaseURL: "https://alpha-beta-tester.firebaseio.com",
+				projectId: "alpha-beta-tester",
+				storageBucket: "alpha-beta-tester.appspot.com",
+				messagingSenderId: "621203832928",
+				appId: "1:621203832928:web:801ff435819f5c27bec305",
+				measurementId: "G-F84RCZYY4V"
+			};
+			// Initialize Firebase
+			firebase.initializeApp(firebaseConfig);
+		</script>
+
 		<script src='js/hex.js' type='text/javascript'></script>
 		<script src='js/main.js' type='text/javascript'></script>
 	</head>
@@ -18,6 +43,17 @@
 			<h1>About Alpha Beta Tester</h1>
 			<p>Alpha Beta Tester is a dashboard aiming to help solve problems by allowing its users to organize their thoughts and plan solutions. It is currently in the alpha stage.</p>
 			<button id='back'>Back</button>
+		</section>
+		<section id='signin' class='screen'>
+			<textarea id='email' placeholder='Email'></textarea>
+			<input type='password' placeholder='Password' id='password' />
+			<button id='gotoprojects'>Go</button>
+		</section>
+		<section id='projects' class='screen'>
+			<h1>Select a Project</h1>
+			<ul id='projects-list'>
+				<!-- li class='project' id='project-test-project'>Test Project</li -->	
+			</ul>
 		</section>
 		<section id='dashboard' class='screen'>
 			<div id='notes' class='cell'>
